Wed Dec 17 15:21:36 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * performance_tests/Misc/Makefile:
          Remove static_libs_only=0 and add static_libs=1 and
          shared_libs=0 to insure that only static libs are built.  We
          need to set these values individually instead of setting
          static_libs_only, since users may override it in
          platform_macros.GNU.  Thanks to John Zorko <jmzorko@mac.com> for
          tracking this down and supplying the patch.  This fixed the
          MacOSX compile errors on the scoreboard. 

Wed Dec 17 11:25:43 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/TMCast/Group.cpp:
          Fixed compile errors in the SunOS Forte8 build caused by the
          lack of the scope of the exceptions.

Wed Dec 17 11:16:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/TMCast/TMCast.mpc:
          TMCast uses native exceptions, so added requires += exceptions
          to this mpc file. This fixes compile errors in no exception
          builds.

        * bin/MakeProjectCreator/config/tmcast.mpb:
          Because TMCast uses native exceptions, this is also required for
          everything that uses TMCast.

Tue Dec 16 11:48:11 2003  Chad Elliott  <elliott_c@ociweb.com>

        * ace/config-aix-4.x.h:
        * ace/config-aix5.1.h:

          Updated the AIX config files to reflect the existence of
          netinet/tcp.h on AIX 5.1.

Tue Dec 16 09:31:18 2003  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/Thread_Semaphore.{h,cpp}:
        * ace/Process_Semaphore.{h,cpp}: Reverted the change
          Sun Dec 14 15:26:46 2003 Douglas C. Schmidt
          <schmidt@ace.cs.wustl.edu> since this has too many side-effects
          that'll break user code.  The "Right Thing"[TM] here is simply
          to update the ACE_Malloc<> documentation to explain not to use
          the ACE_Process_Semaphore or ACE_Thread_Semaphore, but instead